# SLAM_algo

./: .gitignore  README.md
latex/: hsp.tex  hsp_ws18_19.tex
latex/bibtex/: hsp.bib
latex/chapters/: 1_introduction.tex  2_chapter.tex  3_chapter.tex  4_chapter.tex  5_chapter.tex  6_chapter.tex
latex/images/chapter5/: StateModel.gv
latex/images/chapter5/maps/: map_remarked.pgm  map_withPath.pgm
latex/inputs/: abstract.tex  appendix.tex  cover_sheet.tex  list_of_abbreviations.tex  packages.tex
old/datasheets/: SRF08 Ultra sonic range finder.html
old/docu/: Alf_Messages.ods  Einrichten_FPGA.txt  InbetriebnahmeVehikel.txt  Project_History.txt
old/software/Documentation/: Alf.doxyfile
old/software/Software_ARM/Comm_Gateway/: Comm_Gateway.cpp  Comm_Gateway.hpp  hps_fpga_addresses.h
old/software/Software_ARM/Linux/: .config  Garfield_Kernel.patch  Garfield_Kernel4.7.patch  socfpga_cyclone5_de0_sockit_garfield.patch
old/software/Software_ARM/alf_urg/: alf_sensors.cpp  (+3 more)
software/: Architektur.odt
software/LidarConnectProj/: Links.txt
software/LidarConnectProj/LidarConnect/: LidarConnect.pro  URG04LX.cpp  hokuyo.c
software/LidarConnectProj/LidarOutput/: scans.txt
software/PathFinderProj/PathFinder/: CMakeLists.txt  PathFinder.pro  arrayutils.cpp  arrayutils.h  cGraph.cpp  cGraph.h  cnode.cpp  cnode.h  main.cpp
software/PathFinderProj/PathFinder_data/: driveway.txt  map_remarked.pgm  map_whited.pgm  map_withPath.pgm
software/PathFinderProj/SLAM_data/: map.pgm  position.txt
software/PathFinderProj/build-PathFinder-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile  PathFinder
software/PathFinderProj/build-PathFinder-Desktop_Qt_5_11_1_GCC_64bit-Release/: Makefile  PathFinder
software/PathFinderProj/data/: easy_map.pgm  map_hector.pgm  map_withPath.pgm  position_map_pgm.txt
software/STM32_PeripheralController/DOC/: Inbetriebnahme_STM32_Tools.md  PinConfigurationsSTM32.ods  SPIInterfaceDiagram.uxf
software/STM32_PeripheralController/RPI/: SPITest.c
software/STM32_PeripheralController/RPI/SRC/: CMakeLists.txt  Path.cpp  Path.h  PositionUpdater.cpp  PositionUpdater.h  SPIInterface.cpp  SPILibrary.cpp  SPILibrary.h  StateModel.cpp  StateModel.h  config.cfg  controlStates.txt  path.txt  position.txt  ultrasonic.txt
software/STM32_PeripheralController/SRC/: ARM_GCCToolchainFile.cmake  CMakeLists.txt  Makefile  cmake_build.sh  startGdbServer.sh
software/STM32_PeripheralController/SRC/Drivers/CMSIS/Device/ST/STM32F3xx/Include/: stm32f3xx.h
software/STM32_PeripheralController/SRC/Inc/: PeripheralHandles.h  Timing.h  mxconstants.h  stm32f3xx_hal_conf.h
software/STM32_PeripheralController/SRC/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
software/STM32_PeripheralController/SRC/Src/ComModule/: ComModule.c  ComModule.h  ComStructure.h
software/STM32_PeripheralController/SRC/Src/MPUSensor/: MPUSensor.c  MPUSensor.h
software/STM32_PeripheralController/SRC/Src/MotorControl/: MotorControl.c  MotorControl.h
software/STM32_PeripheralController/SRC/Src/MouseSensor/: MouseSensor.c  MouseSensor.h
software/STM32_PeripheralController/SRC/Src/Odometry/: Odometry.c  Odometry.h
software/STM32_PeripheralController/SRC/Src/PIDControl/: PIDControl.c  PIDControl.h
software/STM32_PeripheralController/SRC/Src/PlannerModule/: PlannerModule.c  PlannerModule.h
software/STM32_PeripheralController/SRC/Src/SRFSensor/: SRFSensor.c  SRFSensor.h
software/STM32_PeripheralController/SRC/Src/ServoControl/: ServoControl.c  ServoControl.h
software/final/: CMakeLists.txt  alf_main.cpp  pathfinder_main.cpp
software/final/STM_data/: config.cfg  controlStates.txt  motor.txt  ultrasonic.txt
software/final/alf_car/: CMakeLists.txt  alf_main.cpp  client_main.cpp  pathfinder_main.cpp
software/final/alf_car/include/communication/client/: ClientSocket.h  Socket.h  SocketException.h
software/final/alf_car/include/communication/server/: Server.h  ServerSocket.h  Socket.h  SocketException.h
software/final/alf_car/include/motioncontrol/: ComStructure.h  PositionUpdater.h  StateModel.h
software/final/alf_car/include/pathfinder/: PathfinderInterface.h  commontypes.h
software/final/alf_car/include/slam/: SlamMap.h
software/final/alf_car/launch/: hokuyo_hector_slam.launch
software/final/alf_car/scripts/: copyFiles  resetMap
software/final/alf_car/src/communication/client/: ClientSocket.cpp  Socket.cpp
software/final/alf_car/src/communication/server/: Server.cpp  ServerSocket.cpp  Socket.cpp
software/final/alf_car/src/motioncontrol/: CMakeLists.txt  Path.cpp  Path.h  PositionUpdater.cpp  SPIInterface.cpp  SPILibrary.cpp  StateModel.cpp
software/final/alf_car/src/pathfinder/: PathfinderInterface.cpp  arrayutils.cpp  cGraph.cpp
software/final/alf_car/src/slam/: SlamMap.cpp
software/final/alf_gui/: CMakeLists.txt  alf_gui.cpp
software/final/alf_gui/include/: mainwindow.h
software/final/alf_gui/include/communication/: ClientSocket.h  Socket.h  SocketException.h
software/final/alf_gui/src/: mainwindow.cpp  mainwindow.ui
software/final/alf_gui/src/communication/: ClientSocket.cpp  Socket.cpp
software/final/include/motioncontrol/: ComStructure.h  StateModel.h
software/final/include/slam/: SlamMap.h
software/final/launch/: hokuyo_hector_slam.launch
software/final/src/motioncontrol/: CMakeLists.txt  config.cfg
software/final/src/pathfinder/: arrayutils.cpp  cGraph.cpp
software/final/src/slam/: SlamMap.cpp
software/slam/amcl/: amcl.launch  costmap_common_params.yaml  move_base.launch  room.yaml
software/slam/breezy_slam/: CMakeLists.txt
software/slam/hector_slam/: hector_slam.launch
software/slam/hokuyo_slam/: slam.py  slam_visualization.py
software/slam/ros_integration/: ros_settings.txt
software/testdata/: readme.txt
software/testing/slam/ros_integration/map_interface/: CMakeLists.txt  main.cpp
software/testing/slam/ros_integration/map_interface/include/: SlamMap.h
software/testing/slam/ros_integration/map_interface/src/: SlamMap.cpp  Trajectory.cpp
software/testing/testdata/: xyCoords.csv
todo/: meeting_14_08_18.txt
(+209 files in other folders)
